@@ -2443,7 +2443,14 @@ bacon_video_widget_open_with_subtitle (BaconVideoWidget *bvw, const char *mrl,
 		/* Handle "icyx://" URLs from Orban/Coding Technologies AAC/aacPlus Player */
 		bvw->com->mrl = g_strdup_printf ("http:%s", mrl + 5);
 	} else {
-		bvw->com->mrl = g_strdup (mrl);
+		GFile *file;
+
+		file = g_file_new_for_commandline_arg (mrl);
+		bvw->com->mrl = g_file_get_path (file);
+		g_object_unref (file);
+
+		if (bvw->com->mrl == NULL)
+			bvw->com->mrl = g_strdup (mrl);
 	}
 
 	if (g_str_has_prefix (mrl, "fd://") != FALSE) {
