@@ -1,5 +1,12 @@
 2008-04-29  Bastien Nocera  <hadess@hadess.net>
 
+	* src/backend/bacon-video-widget-xine.c
+	(bacon_video_widget_open_with_subtitle):
+	Try to get a local filename when possible, as there's no gio input
+	plugin for xine-lib (Closes: #528763)
+
+2008-04-29  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_open_with_subtitle):
 	Use GIO to get 1) a nice URI, 2) or a local fuse path
